# logger

./: .gitignore  CMakeLists.txt  Makefile  README.md  mlog.c  mlog.h  mlog_test.c
include/: logger.h  logger_compile_conf.h  logger_level.h
include/format/: format_code_info.h  format_time.h
include/output/: output_file.h
src/: CMakeLists.txt  logger.c
src/format/: format_code_info.c  format_time.c
src/output/: CMakeLists.txt  output_file.c
test/: CMakeLists.txt  example.c
